compiler/tools/fpp-check/test/tlm_packets/duplicate_group_name.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_packets/duplicate_group_name.fpp:7.3
  telemetry packets P {
  ^
error: duplicate packet group P
previous group is here:
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_packets/duplicate_group_name.fpp:3.3
  telemetry packets P {
  ^
